Clean up the gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,6 @@
+_opam
 _build
-_obuild
-.gitignore
-_olint
-.ocplint
-*~
-#*
-autom4te.cache
-configure
-config.status
-.depend
-*.cm*
-*.o
-*.annot
-*.a
-config.log
-META
+.merlin
+*.install
+
+*.swp
