--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -10,8 +10,7 @@ env:
   OPAMYES: true
 
 jobs:
-  odoc:
-    name: Odoc documentation
+  build-and-deploy:
     runs-on: ubuntu-latest
     env:
       OPAMWITHDOC: true
@@ -33,8 +32,9 @@ jobs:
       - name: Make odoc documentation
         run: opam exec -- make doc
 
-      - name: Upload documentation
-        uses: actions/upload-artifact@v4
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          name: odoc
-          path: _build/default/_doc/_html/
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: gh-pages
+          folder: _build/default/_doc/_html/
